load(
    "@com_google_googleapis_imports//:imports.bzl",
    "nodejs_gapic_combined_pkg",
)

exports_files(glob(["*.yaml"]))

nodejs_gapic_combined_pkg(
    name = "google-ai-generativelanguage-nodejs",
    default_version = "v1beta",
    templates_excludes = ["package.json", ".OwlBot.yaml"],
    deps = [
        "//google/ai/generativelanguage/v1:ai-generativelanguage-v1-nodejs",
        "//google/ai/generativelanguage/v1alpha:ai-generativelanguage-v1alpha-nodejs",
        "//google/ai/generativelanguage/v1beta:ai-generativelanguage-v1beta-nodejs",
        "//google/ai/generativelanguage/v1beta2:ai-generativelanguage-v1beta2-nodejs",
        "//google/ai/generativelanguage/v1beta3:ai-generativelanguage-v1beta3-nodejs"
    ],
)
