load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

##############################################################################
# Common
##############################################################################
proto_library(
    name = "experimental_proto",
    srcs = [
        "authorization_config.proto",
        "experimental.proto",
    ],
    deps = [
        "//google/api:api_proto",
    ],
)

##############################################################################
# Java
##############################################################################
java_proto_library(
    name = "experimental_java_proto",
    deps = [":experimental_proto"],
)

java_grpc_library(
    name = "experimental_java_grpc",
    srcs = [":experimental_proto"],
    deps = [":experimental_java_proto"],
)
