# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

##############################################################################
# Common
##############################################################################
proto_library(
    name = "authorization_config_proto",
    srcs = [
        "authorization_config.proto",
    ],
    deps = [],
)

proto_library(
    name = "experimental_proto",
    srcs = [
        "experimental.proto",
    ],
    deps = [
        ":authorization_config_proto",
        "//google/api:annotations_proto",
    ],
)

##############################################################################
# Java
##############################################################################
load("@com_google_googleapis_imports//:imports.bzl", "java_proto_library")

java_proto_library(
    name = "experimental_java_proto",
    deps = [
        ":authorization_config_proto",
        ":experimental_proto",
    ],
)

##############################################################################
# Go
##############################################################################

#":authorization_config_proto" and ":experimental_proto" belong to //google/api:api_go_proto
