# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

##############################################################################
# Common
##############################################################################
load("@com_google_googleapis_imports//:imports.bzl", "proto_library_with_info")

proto_library(
    name = "bigtable_proto",
    srcs = [
        "bigtable.proto",
        "data.proto",
    ],
    deps = [
        "//google/api:annotations_proto",
        "//google/rpc:status_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

proto_library_with_info(
    name = "bigtable_proto_with_info",
    deps = [
        ":bigtable_proto",
        "//google/cloud:common_resources_proto",
    ],
)

##############################################################################
# Java
##############################################################################
load(
    "@com_google_googleapis_imports//:imports.bzl",
    "java_grpc_library",
    "java_gapic_library",
    "java_gapic_assembly_gradle_pkg",
    "java_proto_library",
    "java_gapic_test",
)

java_proto_library(
    name = "bigtable_java_proto",
    deps = [":bigtable_proto"],
)

java_grpc_library(
    name = "bigtable_java_grpc",
    srcs = [":bigtable_proto"],
    deps = [":bigtable_java_proto"],
)

java_gapic_library(
    name = "bigtable_java_gapic",
    src = ":bigtable_proto_with_info",
    gapic_yaml = "bigtable_gapic.yaml",
    service_yaml = "//google/bigtable:bigtable.yaml",
    test_deps = [":bigtable_java_grpc"],
    deps = [":bigtable_java_proto"],
)

java_gapic_test(
    name = "bigtable_java_gapic_test_suite",
    test_classes = [
        "com.google.cloud.bigtable.data.v2.BaseBigtableDataClientTest",
    ],
    runtime_deps = [":bigtable_java_gapic_test"],
)

# Opensource Packages
java_gapic_assembly_gradle_pkg(
    name = "google-cloud-bigtable-v2-java",
    deps = [
        ":bigtable_java_gapic",
        ":bigtable_java_grpc",
        ":bigtable_java_proto",
        ":bigtable_proto",
    ],
)

##############################################################################
# Go
##############################################################################
load(
    "@com_google_googleapis_imports//:imports.bzl",
    "go_proto_library",
    "go_test",
    "go_gapic_library",
    "go_gapic_assembly_pkg",
)

go_proto_library(
    name = "bigtable_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "google.golang.org/genproto/googleapis/bigtable/v2",
    protos = [":bigtable_proto"],
    deps = [
        "//google/api:annotations_go_proto",
        "//google/rpc:status_go_proto",
    ],
)

go_gapic_library(
    name = "bigtable_go_gapic",
    src = ":bigtable_proto_with_info",
    gapic_yaml = "bigtable_gapic.yaml",
    importpath = "cloud.google.com/go/bigtable/apiv2",
    service_yaml = "//google/bigtable:bigtable.yaml",
    deps = [":bigtable_go_proto"],
)

go_test(
    name = "bigtable_go_gapic_test",
    srcs = [":bigtable_go_gapic_srcjar_test"],
    embed = [":bigtable_go_gapic"],
    importpath = "cloud.google.com/go/bigtable/apiv2",
)

# Opensource Packages
go_gapic_assembly_pkg(
    name = "gapi-cloud-bigtable-v2-go",
    deps = [
        ":bigtable_go_gapic",
        ":bigtable_go_gapic_srcjar-smoke-test.srcjar",
        ":bigtable_go_gapic_srcjar-test.srcjar",
        ":bigtable_go_proto",
    ],
)
