load(
    "@com_google_googleapis_imports//:imports.bzl",
    "nodejs_gapic_combined_pkg",
)

exports_files(glob(["*.yaml"]))

nodejs_gapic_combined_pkg(
    name = "google-cloud-agentidentity-nodejs",
    default_version = "v1",
    templates_excludes = ["package.json"],
    deps = [
        "//google/cloud/agentidentity/v1:agentidentity-v1-nodejs",
    ],
)
