exports_files(glob(["*.yaml"]))

load(
    "@com_google_googleapis_imports//:imports.bzl",
    "nodejs_gapic_combined_pkg"
)


nodejs_gapic_combined_pkg(
    name = "google-cloud-agentidentitycredentials-nodejs",
    default_version = "v1alpha",
    templates_excludes = ["package.json"],
    deps = [
        "//google/cloud/agentidentitycredentials/v1alpha:agentidentitycredentials-v1alpha-nodejs",
    ],
)