load(
    "@com_google_googleapis_imports//:imports.bzl",
    "nodejs_gapic_combined_pkg",
)

exports_files(glob(["*.yaml"]))

nodejs_gapic_combined_pkg(
    name = "google-cloud-apiregistry-nodejs",
    default_version = "v1beta",
    templates_excludes = ["package.json"],
    deps = [
        "//google/cloud/apiregistry/v1beta:apiregistry-v1beta-nodejs",
    ],
)
