
proto_library(
    name = "audit_log_proto",
    srcs = ["audit_log.proto"],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:struct_proto",
        "//google/api:annotations_proto",
        "//google/rpc:status_proto",
    ],
    visibility = ["//visibility:public"],
)
