exports_files(glob(["*.yaml"]))

load(
    "@com_google_googleapis_imports//:imports.bzl",
    "nodejs_gapic_combined_pkg"
)


nodejs_gapic_combined_pkg(
    name = "google-cloud-ces-nodejs",
    default_version = "v1",
    templates_excludes = ["package.json"],
    deps = [
        "//google/cloud/ces/v1:ces-v1-nodejs",
        "//google/cloud/ces/v1beta:ces-v1beta-nodejs",
    ],
)