exports_files(glob(["*.yaml"]))

load(
    "@com_google_googleapis_imports//:imports.bzl",
    "nodejs_gapic_combined_pkg"
)


nodejs_gapic_combined_pkg(
    name = "google-cloud-chronicle-nodejs",
    default_version = "v1beta",
    templates_excludes = ["package.json"],
    deps = [
        "//google/cloud/chronicle/v1beta:chronicle-v1beta-nodejs",
    ],
)