load(
    "@com_google_googleapis_imports//:imports.bzl",
    "nodejs_gapic_combined_pkg",
    "ruby_cloud_gapic_library",
    "ruby_gapic_assembly_pkg",
)

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

# Export yaml configs.
exports_files(glob(["*.yaml"]))

nodejs_gapic_combined_pkg(
    name = "google-cloud-contentwarehouse-nodejs",
    default_version = "v1",
    release_level = "stable",
    templates_excludes = ["package.json", ".Owlbot.yaml"],
    deps = [
        "//google/cloud/contentwarehouse/v1:contentwarehouse-v1-nodejs",
    ],
)
