exports_files(glob(["*.yaml"]))

load(
    "@com_google_googleapis_imports//:imports.bzl",
    "nodejs_gapic_combined_pkg"
)


nodejs_gapic_combined_pkg(
    name = "google-databasecenter-nodejs",
    default_version = "v1beta",
    templates_excludes = ["package.json"],
    deps = [
        "//google/cloud/databasecenter/v1beta:databasecenter-v1beta-nodejs",
    ],
)