exports_files(glob(["*.yaml"]))

load(
    "@com_google_googleapis_imports//:imports.bzl",
    "nodejs_gapic_combined_pkg"
)


nodejs_gapic_combined_pkg(
    name = "google-cloud-iamconnectorcredentials-nodejs",
    default_version = "v1alpha",
    templates_excludes = ["package.json"],
    deps = [
        "//google/cloud/iamconnectorcredentials/v1alpha:iamconnectorcredentials-v1alpha-nodejs",
    ],
)