load(
    "@com_google_googleapis_imports//:imports.bzl",
    "nodejs_gapic_combined_pkg",
)

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

# Export yaml configs.
exports_files(glob(["*.yaml"]))

nodejs_gapic_combined_pkg(
    name = "google-cloud-locationfinder-nodejs",
    default_version = "v1",
    templates_excludes = ["package.json", ".OwlBot.yaml"],
    deps = [
        "//google/cloud/locationfinder/v1:locationfinder-v1-nodejs",
    ],
)
