exports_files(glob(["*.yaml"]))

load(
    "@com_google_googleapis_imports//:imports.bzl",
    "nodejs_gapic_combined_pkg"
)


nodejs_gapic_combined_pkg(
    name = "google-cloud-numberregistry-nodejs",
    default_version = "v1alpha",
    templates_excludes = ["package.json"],
    deps = [
        "//google/cloud/numberregistry/v1alpha:numberregistry-v1alpha-nodejs",
    ],
)