exports_files(glob(["*.yaml"]))

load(
    "@com_google_googleapis_imports//:imports.bzl",
    "nodejs_gapic_combined_pkg"
)


nodejs_gapic_combined_pkg(
    name = "google-cloud-universalledger-nodejs",
    default_version = "v1",
    templates_excludes = ["package.json"],
    deps = [
        "//google/cloud/universalledger/v1:universalledger-v1-nodejs",
    ],
)